2013-10-15  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* Term.cs:
	* TermType.cs:
	* Predicate.cs:
	* IValidate.cs:
	* IdpGie.csproj:
	* GlobalContext.cs:
	* TypedPredicate.cs:
	* BuiltinPredicate.cs:
	* TimeSensitiveBase.cs:
	* IdpdObjectTimeState.cs:
	* TypedMethodPredicate.cs:
	* IdpdTimedObjectModification.cs: 

2013-10-15  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MathExtra.cs:
	* IdpGie.csproj:
	* IdpdObject.cs:
	* IdpdMapping.cs:
	* IdpGie.userprefs:
	* GtkTimeWidget.cs:
	* ITimesensitive.cs:
	* IdpCairoMapping.cs:
	* IdpEllipseObject.cs:
	* IdpdOutputDevice.cs:
	* TimeSensitiveBase.cs:
	* IdpdMethodAttribute.cs:
	* IdpdPrintOutputDevice.cs:
	* OpenGLIdpOutputDevice.cs:
	* IdpdLaTeXOutputDevice.cs:
	* IdpdCairoOutputDevice.cs:
	* IdpdTimedObjectModification.cs: 

2013-10-12  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* lex.ll:
	* Term.cs:
	* Atom.cs:
	* Lexer.cs:
	* parse.yy:
	* TermBase.cs:
	* TermType.cs:
	* TopWindow.cs:
	* DrawTheory.cs:
	* IdpGie.csproj:
	* InputContext.cs:
	* ArrayFunction.cs:
	* PredicateInstance.cs:
	* ArrayTailFunction.cs:
	* IdpdMethodAttribute.cs: 

2013-10-12  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* lex.ll:
	* parse.yy:
	* TermBase.cs:
	* NameBase.cs:
	* Function.cs:
	* Predicate.cs:
	* IdpGie.csproj:
	* InputContext.cs:
	* IdpGie.userprefs:
	* FunctionInstance.cs:
	* PredicateInstance.cs: 

2013-10-09  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZIndix.cs:
	* IdpGie.csproj:
	* IdpdObject.cs:
	* GtkTimeWidget.cs:
	* IdpGie.userprefs:
	* IdpCairoMapping.cs:
	* IdpEllipseObject.cs:
	* IdpdOutputDevice.cs:
	* IdpdObjectTimeState.cs:
	* IdpdCairoOutputDevice.cs:
	* IdpdLaTeXOutputDevice.cs:
	* IdpdPrintOutputDevice.cs:
	* OpenGLIdpOutputDevice.cs: 

2013-10-07  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IdpGie.csproj:
	* IdpdObject.cs:
	* GtkTimeWidget.cs:
	* IdpGie.userprefs:
	* IdpCairoMapping.cs:
	* IdpEllipseObject.cs:
	* IdpdPolygonObject.cs:
	* IdpdObjectTimeState.cs: