@@ -23,6 +23,7 @@ using System.Collections.Generic;
 
 namespace IdpGie {
 
+    //[Idpd]
     public class IdpdMapping {
 
         private readonly Dictionary<string,IdpdObject> objects = new Dictionary<string, IdpdObject> ();
